--- a/package.json
+++ b/package.json
@@ -1,6 +1,4 @@
 {
-  "name": "commutatus",
-  "homepage": "https://dhannjayyy.github.io/commutatus",
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
@@ -25,8 +23,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "predeploy": "npm run build"
   },
   "eslintConfig": {
     "extends": [
